# desktop-live-whisper-multispeaker

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.backup  CMakePresets.json  Enter-VSDev.ps1  MODELS.md  README.md  TESTING.md  inspect_model.py  output_8sec.txt  output_9sec.txt  test_20s.txt  test_embedding_quality.py  test_fixed.txt  test_frame_based.txt  test_lower_threshold.txt  test_output.txt  test_wespeaker_python.py  vcpkg.json
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
apps/: test_audio_device.cpp  test_boundary_detection.cpp  test_controller_api.cpp  test_embedding_quality.cpp  test_frame_voting.cpp  test_segment_speakers.cpp  test_transcription_controller.cpp  test_word_clustering.cpp  test_word_clustering_v2.cpp  test_word_speaker_mapping.cpp  test_word_timestamps.cpp
docs/: AUDIO_INPUT_ARCHITECTURE.md  AUDIO_REORGANIZATION.md  QT_INSTALLATION_EXPLAINED.md  QUICK_START_GUI.md  README.md  TRANSCRIPTION_CONTROLLER_API.md  imgui_setup.md  qt_setup.md
scripts/: download_models.ps1  download_models.sh  download_onnxruntime.ps1  download_speaker_model.ps1  export_speaker_model.py  search_ecapa.py  search_titanet.py
specs/: CIRCULAR_BUFFER_PROPOSAL.md  README.md  STREAMING_STRATEGY.md  STREAMING_SUCCESS.md  application_api_design.md  architecture.md  continuous_architecture_findings.md  diarization.md  gui_design.md  imgui_migration.md  phase2_summary.md  phase2b_summary.md  phase3_report.md  phase4_application_api_summary.md  phase5_gui_implementation_log.md  phase6_completion.md  plan.md  plan_phase2b2_voting.md  plan_phase2c_onnx.md  platform_separation.md  speaker_identification_analysis.md  speaker_models_onnx.md  transcription.md
specs/001-feature-desktop-app/: spec.md  tasks.md
specs/archive/: NEXT_AGENT_START_HERE.md  NEXT_STEPS.md  README.md  phase2c_final_summary.md  phase2c_onnx_findings.md  phase2c_test_results.md  plan_phase2b1_embeddings.md  plan_phase2b_diarization.md
src/app/: transcription_controller.cpp  transcription_controller.hpp
src/asr/: diarization_backend.cpp  diarization_backend.hpp  whisper_backend.cpp  whisper_backend.hpp
src/audio/: audio_input_device.cpp  audio_input_device.hpp  audio_input_device_synthetic.cpp  audio_input_device_synthetic.hpp  audio_queue.hpp  drwav_resample.cpp  drwav_resample.hpp  file_capture.cpp  file_capture.hpp  windows_wasapi.cpp  windows_wasapi.hpp  windows_wasapi_out.cpp  windows_wasapi_out.hpp
src/audio/win/: audio_input_device_windows.cpp  audio_input_device_windows.hpp
src/console/: list_devices.cpp  main_console.cpp  transcribe_console.cpp  transcribe_file.cpp
src/core/: config.cpp  config.hpp  logging.cpp  logging.hpp  ring_buffer.hpp  transcription_controller.cpp  transcription_controller.hpp
src/diar/: mel_features.cpp  mel_features.hpp  onnx_embedder.cpp  onnx_embedder.hpp  speaker_cluster.cpp  speaker_cluster.hpp
src/ui/: app_window.cpp  app_window.hpp  main.cpp  main_imgui.cpp  main_macos.mm  main_windows.cpp  transcription_bridge.cpp  transcription_bridge.hpp
src/ui/qml/: Main.qml
test_data/: Sean_Carroll_podcast.md  Sean_Carroll_podcast_ground_truth.txt  preferred_mic.txt
tests/integration/: diarization_segments.cpp  smoke_mic_to_mock.cpp  wav_to_transcript.cpp
tests/unit/: ring_buffer_test.cpp
